# niandra

./: .gitignore  Cargo.toml  README.md  config.example.toml  install.sh  io.github.tombleher.Niandra.yml  music-tracker.service  uninstall.sh
data/: io.github.tombleher.Niandra.Tracker.desktop  io.github.tombleher.Niandra.desktop  io.github.tombleher.Niandra.metainfo.xml
scripts/: take-screenshot.sh
src/: config.rs  context.rs  date_range.rs  display.rs  error.rs  lib.rs  main.rs  track.rs  types.rs
src/analytics/: mod.rs
src/db/: filter.rs  mod.rs  queries.rs  schema.rs
src/gui/: mod.rs
src/gui/application/: imp.rs  mod.rs
src/gui/models/: album_object.rs  artist_object.rs  macros.rs  mod.rs  track_object.rs
src/gui/views/: heatmap.rs  insights.rs  mod.rs  overview.rs  top_lists.rs
src/gui/widgets/: art_loader.rs  contribution_grid.rs  heatmap_grid.rs  mod.rs  ranked_row.rs  stat_card.rs
src/gui/window/: imp.rs  mod.rs
src/mpris/: metadata.rs  mod.rs  player.rs
